# gtuber

./: .gitmodules  README.md  meson.build  meson_options.txt
.github/workflows/: ci.yml  deploy.yml
bindings/: meson.build
bindings/rust/: .gitignore  Cargo.toml  Gir.toml  meson.build
bindings/rust/build-aux/: cargo.sh
bindings/rust/src/: lib.rs  prelude.rs
bindings/rust/sys/: Gir.toml
doc/: GtuberAdaptiveStream.html  GtuberClient.html  GtuberHeartbeat.html  GtuberManifestGenerator.html  GtuberMediaInfo.html  GtuberStream.html  GtuberWebsite.html  annotation-glossary.html  api-index-full.html  gtuber-Enumeration-Types.html  gtuber-Gtuber-Cache.html  gtuber-Gtuber-Config.html  gtuber-Gtuber-Version.html  gtuber-Gtuber.html  gtuber-GtuberAdaptiveStream-Development.html  gtuber-GtuberMediaInfo-Development.html  gtuber-GtuberStream-Development.html  gtuber-api.html  gtuber-devel.html  gtuber-fundamentals.html  gtuber.devhelp2  gtuber.html  index.html  meson.build
doc/reference/: meson.build
doc/reference/gtuber/: gtuber-docs.xml  meson.build  version.xml.in
examples/: README.md
examples/c/: client.c  index.html
examples/gjs/: client.js  client_async.js  index.html
examples/python/: client.py  index.html
examples/rust/: Cargo.toml  index.html
examples/rust/src/: main.rs
examples/vala/: client.vala  index.html
gst/: meson.build
gst/gst-gtuber/: gstgtuber.c  gstgtuberadaptivebin.c  gstgtuberadaptivebin.h  gstgtuberbin.c  gstgtuberbin.h  gstgtuberdashdemux.c  gstgtuberdashdemux.h  gstgtuberelement.c  gstgtuberelement.h  gstgtuberhlsdemux.c  gstgtuberhlsdemux.h  gstgtubersrc.c  gstgtubersrc.h  gstgtuberuridemux.c  gstgtuberuridemux.h  meson.build
gtuber/: gtuber-adaptive-stream-devel.h  gtuber-adaptive-stream-private.h  gtuber-adaptive-stream.c  gtuber-adaptive-stream.h  gtuber-cache-private.h  gtuber-cache.c  gtuber-cache.h  gtuber-caption-stream-devel.h  gtuber-caption-stream-private.h  gtuber-caption-stream.c  gtuber-caption-stream.h  gtuber-client.c  gtuber-client.h  gtuber-config.c  gtuber-config.h  gtuber-enums.h  gtuber-heartbeat-private.h  gtuber-heartbeat.c  gtuber-heartbeat.h  gtuber-loader-private.h  gtuber-loader.c  gtuber-manifest-generator.c  gtuber-manifest-generator.h  gtuber-media-info-devel.h  gtuber-media-info-private.h  gtuber-media-info.c  gtuber-media-info.h  gtuber-misc-functions.c  gtuber-misc-functions.h  gtuber-plugin-devel.h  gtuber-proxy-private.h  gtuber-proxy.c  gtuber-proxy.h  gtuber-soup-compat.c  gtuber-soup-compat.h  gtuber-stream-devel.h  gtuber-stream-private.h  gtuber-stream.c  gtuber-stream.h  gtuber-threaded-object.c  (+11 more)
helpers/: gtuber-helper-json.c  gtuber-helper-json.h  meson.build
helpers/json/: gtuber-helper-json.c  gtuber-helper-json.h  meson.build
plugins/: meson.build
plugins/bilibili/: gtuber-bilibili-bangumi.c  gtuber-bilibili-normal.c  gtuber-bilibili.c  gtuber-bilibili.h  meson.build
plugins/crunchyroll/: gtuber-crunchyroll.c
plugins/crunchyroll-beta/: gtuber-crunchyroll-beta.c  meson.build
plugins/invidious/: gtuber-invidious.c  gtuber-invidious.h
plugins/lbry/: gtuber-lbry.c
plugins/niconico/: gtuber-niconico-heartbeat.c  gtuber-niconico-heartbeat.h  gtuber-niconico.c  meson.build
plugins/peertube/: gtuber-peertube.c  meson.build
plugins/piped/: README.md  gtuber-piped.c  gtuber-piped.h  meson.build
plugins/reddit/: gtuber-reddit.c
plugins/twitch/: gtuber-twitch.c  gtuber-twitch.h  meson.build
plugins/youtube/: gtuber-youtube-proxy.c  gtuber-youtube-proxy.h  gtuber-youtube.c  gtuber-youtube.h  meson.build
tests/: meson.build  tests.c  tests.h
tests/plugins/: bilibili.c  crunchyroll-beta.c  crunchyroll.c  invidious.c  lbry.c  meson.build  niconico.c  peertube.c  piped.c  reddit.c  twitch.c  youtube.c
utils/: gtuber-utils.c  gtuber-utils.h  meson.build
utils/common/: gtuber-utils-common.c  gtuber-utils-common.h  meson.build
utils/json/: gtuber-utils-json.c  gtuber-utils-json.h  meson.build
utils/xml/: gtuber-utils-xml.c  gtuber-utils-xml.h  meson.build
utils/youtube/: gtuber-utils-youtube.c  gtuber-utils-youtube.h  meson.build
