# Gtuber
option('introspection', type: 'boolean', value: true, description: 'Build introspection data')
option('doc', type: 'boolean', value: false, description: 'Build documentation')

# Utils
option('utils-common', type: 'feature', value: 'auto')
option('utils-json', type: 'feature', value: 'auto')

# Plugins
option('bilibili', type: 'feature', value: 'auto')
option('twitch', type: 'feature', value: 'auto')
option('youtube', type: 'feature', value: 'auto')
