# Gtuber
option('introspection', type: 'feature', value: 'auto', description: 'Build GObject Introspection data')
option('vapi', type: 'feature', value: 'auto', description: 'Build Vala bindings')
option('doc', type: 'boolean', value: false, description: 'Build documentation')
option('tests', type: 'boolean', value: false, description: 'Build tests')

# GStreamer
option('gst-gtuber', type: 'feature', value: 'auto', description: 'GStreamer plugin')

# Utils
option('utils-common', type: 'feature', value: 'auto')
option('utils-json', type: 'feature', value: 'auto')
option('utils-youtube', type: 'feature', value: 'auto')

# Plugins
option('bilibili', type: 'feature', value: 'auto')
option('invidious', type: 'feature', value: 'auto')
option('lbry', type: 'feature', value: 'auto')
option('piped', type: 'feature', value: 'auto')
option('twitch', type: 'feature', value: 'auto')
option('youtube', type: 'feature', value: 'auto')
