[package]
name = "example"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"

[dependencies.gtuber]
package = "gtuber-rs"
path = "../../gtuber-rs"

[dependencies.glib]
git = "https://github.com/gtk-rs/gtk-rs-core.git"
[dependencies.gio]
git = "https://github.com/gtk-rs/gtk-rs-core.git"
